# planarity-feedstock

./: .travis.yml  README.md  conda-forge.yml
.ci_support/: win_c_compilervs2008.yaml  win_c_compilervs2015.yaml
recipe/: 0001-Adapt-for-Windows-build.patch  CMakeLists.txt  bld.bat  build.sh  dllexport.patch  exclude-unistd.patch  extern.patch  meta.yaml
